2006-03-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* dump_initial_data_postgres.sh:  Add the content_available_display_pages table to the dump, can someone re-generate the initial data from a working install
	* Remove the ?> tags from all the classes.

2006-03-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix bug where right_area_bottom content wouldn't be displayed.
	* Minor CSS cleanup

2006-03-28 François Proulx <francois.proulx@gmail.com>
	* Fixed error in initial schema (bad client encoding)
	
2006-03-28 François Proulx <francois.proulx@gmail.com>
	* Fixed schema 37 : left_area_top
	* Updated initial schema
	
2006-03-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* First step in massive simplification of CSS and templates
	* Implement the new main CSS structure
  	* Implement working content assignation interface and content ordering for both network and nodes.
  	* Display of content according to assignation work on 'portal' and 'login'.  'everywhere' not yet implemented
	* Get rid of some ISF specific interface elements
	* Finally replace the overly complicated start button by a "Use the Internet" link that will not
	 get you out of your working tab
	* Fix #118

2006-03-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* init_php.php: Fix stripslashes_cb() so it actually works, this means the aust server should work properly with auth servers with magic quotes turned on.
	This is still not recommended however.
	* Remove some spurious error ouptut on logout.
	* Remove potential error in network id parsing

2006-03-22 François Proulx <francois.proulx@gmail.com>
	* Fixed Google Maps URLs bug
	* Since Google Maps does not provide Javascript over SSL (it does but the certificate does not match)
	  the code path to the map does not use SSL, but the outgoing URLs do.
	* Removed lost echo in Locale.php
	
2006-03-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* login/index.php: Remove huge security hole introduced by stylistic changes in the file.  